<resources>
    <string name="app_name">Questionnaire2ndTry</string>
    <string name="qs_img_not_found">Question image could not be found</string>
    <string name="q0">For each question, pick your favourite option out of the 3</string>
    <string name="q1">For each question, pick your favourite option out of the 3</string>
    <string name="c1">1</string>
    <string name="c2">2</string>
    <string name="c3">3</string>
    <string name="skip">Don\'t Know</string>
    <string name="feedback_title">Your style:</string>
    <string name="fb1">Name of Style:</string>
    <string name="done">Done</string>
    <string name="next">Next</string>
</resources>
